fixes minor alignments due to translations of month words

--- a/css/weather34dashboard.dark.css
+++ b/css/weather34dashboard.dark.css
@@ -7108,7 +7108,7 @@ regionalred {
   font-family: weathertext2;
   display: flex;
   top: 5px;
-  left: 75px;
+  left: 85px;
   text-transform: capitalize;
 }
 
