--- a/css/weather34dashboard.light.css
+++ b/css/weather34dashboard.light.css
@@ -7858,7 +7858,7 @@ airdescription {
   font-family: weathertext2;
   display: flex;
   top: 5px;
-  left: 75px;
+  left: 85px;
   text-transform: capitalize;
 }
 
